show/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: chat-app
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: chat
    spec:
      containers:
      - name: chat-app
        image: dima248/chat
        imagePullPolicy: Always
