show/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: chat-ingress
  annotations:
    certmanager.k8s.io/issuer: letsencrypt-prod
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - dmitri.coc09.mms-support.de
    secretName: tls-secret-prod
  rules:
  - host: dmitri.coc09.mms-support.de
    http:
      paths:
        - path: /
          backend:
            serviceName: chat-service
            servicePort: 8080
